<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.talismansoftwaresolutions.talismantasklist.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_tasks"
        android:orderInCategory="101"
        android:title="@string/open_tasks"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_completed_tasks"
        android:orderInCategory="102"
        android:title="@string/completed_tasks"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_deleted_tasks"
        android:orderInCategory="103"
        android:title="@string/deleted_tasks"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_all_tasks"
        android:orderInCategory="104"
        android:title="@string/all_tasks"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_all_tasks"
        android:orderInCategory="105"
        android:title="@string/action_delete_all_tasks"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_archived_tasks"
        android:orderInCategory="106"
        android:title="@string/action_archived_tasks"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_server"
        android:title="@string/all_server"
        android:orderInCategory="107"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/action_server_upload_tasks"
                android:title="@string/server_upload_tasks" />
            <item
                android:id="@+id/action_server_tasks"
                android:title="@string/server_download_tasks" />
            <item
                android:id="@+id/action_tests_server"
                android:title="@string/action_test_server" />
        </menu>

    </item>

</menu>
